# naive-kv

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs  main.rs  opt.rs
common/: Cargo.toml
common/src/: lib.rs  req.rs
server/: Cargo.toml
server/src/: internal.rs  kv.rs  lib.rs  main.rs
stopper/: Cargo.toml
stopper/src/: main.rs
