[package]
name = "client"
version = "0.1.0"
authors = ["Yang Qi <y3tothe6@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
common = { path = "../common" }
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
structopt = "0.3.14"
