[package]
name = "server"
version = "0.1.0"
authors = ["Yang Qi <y3tothe6@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
common = { path = "../common" }
bincode = "1.2.1"
env_logger = "0.7.1"
futures = "0.3.4"
log = "0.4.8"
